--- a/app/views/timelines/_post.html.erb
+++ b/app/views/timelines/_post.html.erb
@@ -35,11 +35,11 @@
 </style>
 <div class="panel-content panel-activity">
   <div class="d-flex text-muted">
-    <%= link_to profile_path(user.find(post.userid).userid), style:"color:black" do %>
+    <%= link_to profile_path(user.find(post.userid).userid), style: "color:black" do %>
       <% if user.find(post.userid).image.nil? %>
-        <%= image_tag "/user_images/default_icon.png", class: "icon bd-placeholder-img flex-shrink-0 me-2 rounded",width: "40px",height: "40px" %>
+        <%= image_tag "/user_images/default_icon.png", class: "icon bd-placeholder-img flex-shrink-0 me-2 rounded", width: "40px", height: "40px" %>
       <% else %>
-        <%= image_tag "/user_images/#{user.find(post.userid).image}" , class: "icon bd-placeholder-img flex-shrink-0 me-2 rounded",width: "40px",height: "40px"%>
+        <%= image_tag "/user_images/#{user.find(post.userid).image}", class: "icon bd-placeholder-img flex-shrink-0 me-2 rounded", width: "40px", height: "40px" %>
       <% end %>
     <% end %>
 
@@ -48,18 +48,30 @@
       <strong class="text-dark" style="font-size:20px;margin: 0"><%= user.find(post.userid).nickname %></strong>
       <span class="text-gray small" style="margin: 0">@<%= user.find(post.userid).userid %></span>
       <span class="text-gray small"><i class="far fa-clock clock-icon"></i><%= time_ago_in_words(post.created_at) %></span>
-      <br />
-      <br />
+      <br/>
+      <br/>
       <span class="spans text-dark" style="font-size:18px; margin: 0;"><%= html_escape(html_with_link_to_hashtag((post.content))).gsub(/\r\n|\r|\n/, "<br />").html_safe %></span>
       <br/>
     </p>
   </div>
+  <div class="d-flex justify-content-between" style="margin-left: 50px">
+    <% if post.image? %>
+      <div id="img1_<%= post.id %>" onclick="onClick(<%= post.id %>)" >
+        <%= image_tag post.image.url, style: "width: 200px; height: 200px;" %>
+      </div>
+      <div id="back"></div>
+      <div id="img1Big_<%= post.id %>" style="display: none;z-index: 10001">
+        <%= image_tag post.image.url %>
+      </div>
+    <% end %>
+  </div>
 
   <div class="d-flex justify-content-between">
+
     <div style="margin-left: 50px">
       <span class="likes">
         <% if current_user.liked_by?(post.id) %>
-          <%= link_to timeline_like_path(post.id,current_user.id), method: :delete , remote: true do%>
+          <%= link_to timeline_like_path(post.id, current_user.id), method: :delete, remote: true do %>
             <i class="fas fa-heart"></i>
           <% end %>
           <%= post.likes.count %>
@@ -71,7 +83,7 @@
         <% end %>
       </span>
       <span class="comments">
-        <%= link_to timeline_path(post.id) do%>
+        <%= link_to timeline_path(post.id) do %>
           <i class="far fa-comment-alt" style="height: 15.5px"></i>
         <% end %>
         <%= post.comments.count %>
@@ -79,8 +91,8 @@
     </div>
 
     <div>
-      <% if post.userid == current_user.id%>
-        <%= link_to(timeline_path(post.id),method: :delete) do%>
+      <% if post.userid == current_user.id %>
+        <%= link_to(timeline_path(post.id), method: :delete) do %>
           <i class="far fa-trash-alt"></i>
         <% end %>
       <% end %>
