--- a/app/views/profiles/index.html.erb
+++ b/app/views/profiles/index.html.erb
@@ -43,7 +43,7 @@
   </div>
 
   <div class="my-3 p-3 bg-white rounded shadow-sm">
-    <h6 class="border-bottom pb-2 mb-0">フォローリスト (<%= @following.count %>)</h6>
+    <h6 class="border-bottom pb-2 mb-0">フォローリスト (<%= @following.size %>)</h6>
     <% if @following[0] == nil %>
       <br>
       <p class="text-gray-dark">現在はいないようです！</p>
@@ -71,7 +71,7 @@
   </div>
 
   <div class="my-3 p-3 bg-white rounded shadow-sm">
-    <h6 class="border-bottom pb-2 mb-0">フォロワーリスト (<%= @follower.count %>)</h6>
+    <h6 class="border-bottom pb-2 mb-0">フォロワーリスト (<%= @follower.size %>)</h6>
     <% if @follower[0] == nil%>
       <br>
       <p class="text-gray-dark">現在はいないようです！</p>
@@ -100,10 +100,11 @@
 
   <div class="my-3 p-3 bg-white rounded shadow-sm">
     <h6 class="border-bottom pb-2 mb-0">おすすめユーザー</h6>
-    <% @users.shuffle.first(5).each do |user| %>
-      <% unless current_user.id == user.id %>
-        <% unless current_user.following?(user) %>
-          <% unless user.userid == nil%>
+    <% count = 0 %>
+    <% @users.shuffle.each do |user| %>
+      <% if user.userid?%>
+        <% unless current_user.id == user.id %>
+          <% unless following?(@following,user) %>
             <%= link_to profile_path(user.userid) do%>
               <div class="d-flex text-muted pt-3">
                 <% if user.image.nil? %>
@@ -116,6 +117,8 @@
                     @<%= user.userid %>
                   </p>
               </div>
+              <% count += 1 %>
+              <% break if count > 5 %>
             <% end %>
           <% end %>
         <% end %>
