--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -9,15 +9,15 @@
           <div class="userdata">
             <div class="userpic">
               <% if @user.image.nil? %>
-                <%= image_tag "default_icon" , :size => '100x100', class: "userpicimg icon flex-shrink-0 show-icon"%>
+                <%= image_tag "default_icon", :size => '100x100', class: "userpicimg icon flex-shrink-0 show-icon" %>
               <% else %>
-                <%= image_tag "/user_images/#{@user.image}",style: "width: 100px;height:100px;",class:"userpicimg icon bd-placeholder-img flex-shrink-0 show-icon"%>
+                <%= image_tag "/user_images/#{@user.image}", style: "width: 100px;height:100px;", class: "userpicimg icon bd-placeholder-img flex-shrink-0 show-icon" %>
               <% end %>
             </div>
             <div class="names">
               <h2 class="username"><%= @user.name %></h2>
               <p style="margin-bottom: 0">(<%= @user.nickname %>)</p>
-              <p>@<%=@user.userid%></p>
+              <p>@<%= @user.userid %></p>
             </div>
           </div>
         </div>
@@ -25,57 +25,57 @@
           <ul class="nav nav-pills pull-left countlist" role="tablist">
             <li role="presentation">
               <h3><%= @user.followings_list.count %><br>
-                <small>Followers</small> </h3>
+                <small>Followers</small></h3>
             </li>
             <li role="presentation">
               <h3><%= @user.followers_list.count %><br>
-                <small>Follow</small> </h3>
+                <small>Follow</small></h3>
             </li>
             <li role="presentation">
               <h3><%= @profile.grade %><br>
-                <small>学科</small> </h3>
+                <small>学科</small></h3>
             </li>
             <li role="presentation">
               <h3><%= @profile.school_class %><br>
-                <small>クラス</small> </h3>
+                <small>クラス</small></h3>
             </li>
             <li role="presentation">
               <h3><%= @profile.number %><br>
-                <small>出席番号</small> </h3>
+                <small>出席番号</small></h3>
             </li>
             <li role="presentation">
               <h3><%= @profile.student_id %><br>
-                <small>学籍番号</small> </h3>
+                <small>学籍番号</small></h3>
             </li>
           </ul>
           <% if current_user.id != @user.id %>
-            <% unless current_user.following?(@user) %>
-              <div class="actions ">
-                <%= link_to 'フォロー',
-                            profile_relationships_path(@user.userid),
-                            method: :post,
-                            style: "color:#FFF;",
-                            class:"btn btn-primary followbtn"
-                %>
-              </div>
-            <% else %>
+            <% if following?(@following, @user) %>
               <div class="actions">
                 <%= link_to 'フォロー解除',
                             profile_relationship_path(@user.userid),
                             method: :delete,
                             style: "color:#FFF;",
-                            class:"btn btn-primary followbtn"
+                            class: "btn btn-primary followbtn"
+                %>
+              </div>
+            <% else %>
+              <div class="actions ">
+                <%= link_to 'フォロー',
+                            profile_relationships_path(@user.userid),
+                            method: :post,
+                            style: "color:#FFF;",
+                            class: "btn btn-primary followbtn"
                 %>
               </div>
             <% end %>
           <% end %>
-           <% if current_user.id == @user.id %>
-              <div class="actions">
-                <%= link_to '編集',
-                            edit_profile_path,
-                            style: "color:#FFF;",
-                            class:"btn btn-primary followbtn" %>
-              </div>
+          <% if current_user.id == @user.id %>
+            <div class="actions">
+              <%= link_to '編集',
+                          edit_profile_path,
+                          style: "color:#FFF;",
+                          class: "btn btn-primary followbtn" %>
+            </div>
           <% end %>
         </div>
       </div>
