--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,84 +15,82 @@
  */
 
 
-
-html{
+html {
   font-family: 'Kiwi Maru', serif;
 }
 
-body{
+body {
   margin: 0;
 }
 
-#main-nav{
+#main-nav {
   z-index: 9999;
 }
 
-#sub-nav{
+#sub-nav {
   z-index: 9998;
 }
 
-#main-nav,#sub-nav{
-  background-color: #ffffff;
-  font-family: 'Rubik','M PLUS Rounded 1c', sans-serif;
-  border: rgba(166,145,113,0.2) solid 1px;
+#main-nav, #sub-nav {
+  font-family: 'Rubik', 'M PLUS Rounded 1c', sans-serif;
+  border: rgba(166, 145, 113, 0.2) solid 1px;
 }
 
-#main-nav .dropdown-menu{
+#main-nav .dropdown-menu {
   z-index: 9999;
 }
 
-#main-nav .btn{
+#main-nav .btn {
   border: 0 solid transparent;
-  padding:3px;
+  padding: 3px;
   margin-top: 5px;
   margin-left: 3px;
   margin-bottom: 5px;
 }
 
-#main-nav .btn-primary{
-  background-color: rgba(29,144,190,0.8);
-  border-color: rgba(29,144,190,0.8);
+#main-nav .btn-primary {
+  background-color: rgba(29, 144, 190, 0.8);
+  border-color: rgba(29, 144, 190, 0.8);
 }
 
-#main-nav svg{
+#main-nav svg {
   margin-right: 3px;
 }
 
-.notice{
+.notice {
   font-family: 'Kiwi Maru', serif;
 }
 
-.box{
+.box {
   display: inline-block;
 }
 
-.amica_icon{
+.amica_icon {
   width: 50px;
 }
 
-.icons{
+.icons {
   font-size: 1rem;
   margin-left: 7px;
 }
 
-.link{
+.link {
   color: #212529;
   text-decoration: none;
 }
 
-.link:hover{
+.link:hover {
   color: #FFFFFF;
 }
 
-.default_icon{
+.default_icon {
   background-color: #FFFFFF;
   border: solid 2px;
   border-radius: 30%;
   width: 45px;
 }
 
-.user_icon{
+.user_icon {
   background: #FFF;
   border: solid 2px;
   border-radius: 30%;
@@ -101,20 +99,26 @@ body{
   margin-left: 7px;
 }
 
-.name{
+.name {
   font-size: 1.1rem;
 }
 
-.user_id{
+.user_id {
   font-size: 0.9rem;
 }
 
-table{
+table {
   margin-left: 7px;
 }
 
-main{
+main {
   z-index: 1;
+  min-height: 100vh;
+  position: relative;
+  box-sizing: border-box;
 }
 
+.bg-gray {
+  background-color: #666666
+}
 
