--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -28,22 +28,25 @@
           </div>
         </div>
 
+        <% if @favorite_users.size == 0  %>
+          <p>お勧めユーザー♡カンナちゃんラブラブ</p>
+        <% else %>
+          <div id="favorite_user"></div>
+            <button type="button" class="btn btn-secondary btn-lg w-100 mt-2 mb-3" style="background-color: #00bfff" data-bs-toggle="collapse" data-bs-target="#collapseExample1" aria-expanded="false" aria-controls="collapseExample1">
+              お気に入り
+            </button>
+            <div class="collapse show mb-1" id="collapseExample1">
+              <%= render partial: 'pages/user', collection: @favorite_users, as: :user, locals: { fixed_current_user: @user, favorite_model: @favorite } %>
+            </div>
 
-        <div id="favorite_user"></div>
-        <button type="button" class="btn btn-secondary btn-lg w-100 mt-2 mb-3" style="background-color: #00bfff" data-bs-toggle="collapse" data-bs-target="#collapseExample1" aria-expanded="false" aria-controls="collapseExample1">
-          お気に入り
-        </button>
-        <div class="collapse show mb-1" id="collapseExample1">
-          <%= render partial: 'pages/user', collection: @favorite_users, as: :user, locals: { fixed_current_user: @user, favorite_model: @favorite } %>
-        </div>
-
-        <button type="button" class="btn btn-secondary btn-lg w-100 mt-2 mb-3" style="background-color: #00bfff" data-bs-toggle="collapse" data-bs-target="#collapseExample2" aria-expanded="false" aria-controls="collapseExample2">
-          友達
-        </button>
-        <div class="collapse show mb-1" id="collapseExample2">
-          <%= render partial: 'pages/user', collection: @mates, as: :user, locals: { fixed_current_user: @user, favorite_model: @favorite } %>
-        </div>
-      </div>
+            <button type="button" class="btn btn-secondary btn-lg w-100 mt-2 mb-3" style="background-color: #00bfff" data-bs-toggle="collapse" data-bs-target="#collapseExample2" aria-expanded="false" aria-controls="collapseExample2">
+              友達
+            </button>
+            <div class="collapse show mb-1" id="collapseExample2">
+              <%= render partial: 'pages/user', collection: @mates, as: :user, locals: { fixed_current_user: @user, favorite_model: @favorite } %>
+            </div>
+          </div>
+        <% end %>
 
       <div class="hidden-lg d-lg-none d-xl-none d-xxl-none">
         <hr class="my-4">
@@ -67,19 +70,21 @@
           </div>
         </div>
 
-
+        <% if @favorite_communities.size == 0  %>
+          <p>グループおらんやんｗ</p>
+        <% else %>
         <div id="favorite_community"></div>
-
         <button type="button" class="btn btn-secondary btn-lg w-100 mt-2 mb-3" style="background-color: #00bfff" data-bs-toggle="collapse" data-bs-target="#collapseExample3" aria-expanded="false" aria-controls="collapseExample3">お気に入り</button>
         <div class="collapse show mb-1" id="collapseExample3">
           <%= render partial: 'pages/community', collection: @favorite_communities, as: :community, locals: { fixed_current_user: @user, favorite_model: @favorite } %>
         </div>
 
-        <button type="button" class="btn btn-secondary btn-lg w-100 mt-2 mb-3" style="background-color: #00bfff" data-bs-toggle="collapse" data-bs-target="#collapseExample4" aria-expanded="false" aria-controls="collapseExample4">コミュニティ</button>
-        <div class="collapse show mb-1" id="collapseExample4">
-          <%= render partial: 'pages/community', collection: @communities, as: :community, locals: { fixed_current_user: @user, favorite_model: @favorite } %>
+          <button type="button" class="btn btn-secondary btn-lg w-100 mt-2 mb-3" style="background-color: #00bfff" data-bs-toggle="collapse" data-bs-target="#collapseExample4" aria-expanded="false" aria-controls="collapseExample4">コミュニティ</button>
+          <div class="collapse show mb-1" id="collapseExample4">
+            <%= render partial: 'pages/community', collection: @communities, as: :community, locals: { fixed_current_user: @user, favorite_model: @favorite } %>
+          </div>
         </div>
       </div>
     </div>
-  </div>
-</main>
+        <%end %>
+  </main>
