--- a/app/views/pages/show.html.erb
+++ b/app/views/pages/show.html.erb
@@ -3,38 +3,21 @@
   <div class="row">
     <div class="col-md-3">
 
-      <!-- Tips Widget -->
-      <!--===================================================-->
-      <div class="mar-btm">
-        <h4 class="text-thin"><i class="fa fa-lightbulb-o fa-lg fa-fw text-warning"></i> Useful tips</h4>
-        <p class="text-muted mar-top">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt.</p>
+      <div class="pt-5 mar-btm ">
+        <h4 class="text-thin"><i class="fa fa-lightbulb-o fa-lg fa-fw text-warning"></i> ガイド </h4>
         <div class="list-group bg-trans">
-          <a class="list-group-item" href="#"><span class="badge badge-purple badge-icon badge-fw pull-left"></span> Lorem ipsum</a>
-          <a class="list-group-item" href="#"><span class="badge badge-info badge-icon badge-fw pull-left"></span> Consectetuer adipiscing</a>
-          <a class="list-group-item" href="#"><span class="badge badge-pink badge-icon badge-fw pull-left"></span> Sed diam nonummy</a>
-          <a class="list-group-item" href="#"><span class="badge badge-success badge-icon badge-fw pull-left"></span> Euismod tincidunt</a>
+          <p class="list-group-item"><span class="badge badge-purple badge-icon badge-fw pull-left"></span><%= link_to "About", about_path %></p>
+          <p class="list-group-item"><span class="badge badge-info badge-icon badge-fw pull-left"></span><%= link_to "利用規約", static_path %></p>
+          <p class="list-group-item"><span class="badge badge-pink badge-icon badge-fw pull-left"></span><%= link_to "プライバシーポリシー", privacy_path %></p>
+          <p class="list-group-item"><span class="badge badge-success badge-icon badge-fw pull-left"></span><%= link_to "Q&A", page_path(current_user.nickname) %></p>
+          <p class="list-group-item"><span class="badge badge-warning badge-icon badge-fw pull-left"></span><%= link_to "ヘルプ", about_path%></p>
         </div>
+
       </div>
-      <!--===================================================-->
-
-      <hr>
-
-      <!-- Contact us widget -->
-      <!--===================================================-->
-      <div class="mar-btm">
-        <h4 class="text-thin"><i class="fa fa-question-circle fa-lg fa-fw text-primary"></i> Can't find the answer? </h4>
-        <p class="text-muted mar-top">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt.</p>
-        <a href="#" class="btn btn-primary">Contact us</a>
-      </div>
-      <!--===================================================-->
-
     </div>
     <div class="col-md-9">
       <div class="panel">
         <div class="panel-body">
-
-          <!-- GENERAL -->
-          <!--===================================================-->
           <h3 class="pad-all bord-btm text-thin">Q&A</h3>
           <div id="demo-gen-faq" class="panel-group accordion">
             <div class="bord-no pad-top">
@@ -74,7 +57,10 @@
                           </div>
                         </div>
                       </div>
-
+                    </div>
+                    <div class="mt-5   mar-btm">
+                      <h4 class="text-thin"><i class="fa fa-question-circle fa-lg fa-fw text-primary "></i> 問題は解決されましたか？</h4>
+                      <p class="text-muted mar-top ms-3 fs-6">問題が解決されない場合は<%= link_to "お問い合わせ", contact_path %>までお願い致します。</p>
                     </div>
                   </div>
                 </div>
