--- a/app/views/chats/show.html.erb
+++ b/app/views/chats/show.html.erb
@@ -1,5 +1,90 @@
 <%= stylesheet_link_tag 'chats', media: 'all', 'data-turbolinks-track': 'reload' %>
-
+<!-- menuModal -->
+<div class="modal fade" id="menuModal" tabindex="-1" aria-labelledby="menuModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="menuModalLabel">menu</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <div class="container">
+          <div class=" mb-0 d-flex ">
+            <div class="modal-item shadow-sm mb-5 bg-body rounded">
+              <%= link_to  chats_path,class: " modal-icons nav-link" do %>
+                <i class="fas fa-comments"></i>
+                <p class="small">チャット</p>
+              <% end %>
+            </div>
+            <div class="modal-item shadow-sm mb-5 bg-body rounded">
+              <%= link_to  communities_path,class: "modal-icons nav-link" do %>
+                <i class="fas fa-users"></i>
+                <p class="small">コミュニティ</p>
+              <% end %>
+            </div>
+          </div>
+          <div class="mb-0 d-flex ">
+            <div class="modal-item shadow-sm  mb-5 bg-body rounded">
+              <%= link_to  timelines_path,class: "modal-icons nav-link" do %>
+                <i class="fas fa-clock"></i>
+                <p class="small">タイムライン</p>
+              <% end %>
+            </div>
+            <div class="modal-item shadow-sm  mb-5 bg-body rounded">
+              <%= link_to  profiles_path,class: "modal-icons nav-link" do %>
+                <i class="fas fa-address-card"></i>
+                <p class="small">友達</p>
+              <% end %>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+<!-- iamgeModal -->
+<div class="modal fade" id="imageModal" tabindex="-1" aria-labelledby="imageModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="imageModalLabel">画像送信</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <input type="file" id="image_uploader"  accept="image/*" data-behavior="chat_speaker">
+        <input type="hidden" id="send_image" value="" >
+      </div>
+      <canvas id="canvas" style="text-align: center;"></canvas>
+      <div class="modal-footer">
+        <label><!-- Button trigger modal -->
+          <button id="image_submit_button" style="display: none" type="submit" class="btn btn-primary form-control" ></button>
+          <span class="m-1" style="font-size: 1.6rem;color: #1b8798"><i class="fas fa-paper-plane"></i></span>
+        </label>
+      </div>
+    </div>
+  </div>
+</div>
+<!-- fileModal -->
+<div class="modal fade" id="fileModal" tabindex="-1" aria-labelledby="fileModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="fileModalLabel">ファイル送信</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <input type="file" id="file_uploader" data-behavior="chat_speaker">
+        <input type="hidden" id="send_file" value="" >
+      </div>
+      <div class="modal-footer">
+        <label><!-- Button trigger modal -->
+          <button id="file_submit_button" style="display: none" type="submit" class="btn btn-primary form-control" ></button>
+          <span class="m-1" style="font-size: 1.6rem;color: #1b8798"><i class="fas fa-paper-plane"></i></span>
+        </label>
+      </div>
+    </div>
+  </div>
+</div>
 <script>
     document.addEventListener("DOMContentLoaded",function bottom_scroll(){
         var elm = document.documentElement;
@@ -40,6 +125,10 @@
              <button id="image_button" style="display: none" type="button" class="btn btn-primary form-control" data-bs-toggle="modal" data-bs-target="#imageModal"></button>
              <span class="m-1" style="font-size: 1.6rem;color: #f0c065"> <i class="fas fa-image"></i></span>
            </label>
+           <label>
+             <button id="file_button" style="display: none" type="button" class="btn btn-primary form-control" data-bs-toggle="modal" data-bs-target="#fileModal"></button>
+             <span class="m-1" style="font-size: 1.4rem;color: #f0c065"><i class="fas fa-upload"></i></span>
+           </label>
           <input type="hidden" id="room_id" value= <%= @room.id %> data-behavior="chat_speaker">
           <input type="hidden" id="user_id" value= <%= current_user.id %> data-behavior="chat_speaker">
            <input type="hidden" id="partner_userid" value= <%= @user.userid %> >
@@ -59,69 +148,3 @@
   </div>
 </div>
 
-<!-- menuModal -->
-<div class="modal fade" id="menuModal" tabindex="-1" aria-labelledby="menuModalLabel" aria-hidden="true">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="menuModalLabel">menu</h5>
-        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-      </div>
-      <div class="modal-body">
-        <div class="container">
-        <div class=" mb-0 d-flex ">
-          <div class="modal-item shadow-sm mb-5 bg-body rounded">
-            <%= link_to  chats_path,class: " modal-icons nav-link" do %>
-              <i class="fas fa-comments"></i>
-              <p class="small">チャット</p>
-            <% end %>
-          </div>
-          <div class="modal-item shadow-sm mb-5 bg-body rounded">
-            <%= link_to  communities_path,class: "modal-icons nav-link" do %>
-              <i class="fas fa-users"></i>
-              <p class="small">コミュニティ</p>
-            <% end %>
-          </div>
-        </div>
-          <div class="mb-0 d-flex ">
-          <div class="modal-item shadow-sm  mb-5 bg-body rounded">
-            <%= link_to  timelines_path,class: "modal-icons nav-link" do %>
-              <i class="fas fa-clock"></i>
-              <p class="small">タイムライン</p>
-            <% end %>
-          </div>
-          <div class="modal-item shadow-sm  mb-5 bg-body rounded">
-            <%= link_to  profiles_path,class: "modal-icons nav-link" do %>
-              <i class="fas fa-address-card"></i>
-              <p class="small">友達</p>
-            <% end %>
-          </div>
-        </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-
-<!-- iamgeModal -->
-<div class="modal fade" id="imageModal" tabindex="-1" aria-labelledby="imageModalLabel" aria-hidden="true">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="imageModalLabel">画像送信</h5>
-        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-      </div>
-      <div class="modal-body">
-          <input type="file" id="image_uploader" data-behavior="chat_speaker">
-        <input type="hidden" id="send_image" value="" >
-      </div>
-      <canvas id="canvas" style="text-align: center;"></canvas>
-      <div class="modal-footer">
-        <label><!-- Button trigger modal -->
-          <button id="image_submit_button" style="display: none" type="submit" class="btn btn-primary form-control" ></button>
-          <span class="m-1" style="font-size: 1.6rem;color: #1b8798"><i class="fas fa-paper-plane"></i></span>
-        </label>
-      </div>
-    </div>
-  </div>
-</div>
